Changelog
=========

1.3 - Unreleased
----------------


1.2 - 2009-08-09
----------------

- Fix tests to run on Plone 3.3.
  [witsch]

- Fix issue with leftover local role assignments for deleted users.
  [pbugni, rossp]


1.1 - 2009-03-05
----------------

- Add missing imports in various places.
  [wichert]

- Fix a bug in the permission migration logic, which caused the Manager
  role to gain all permissions.
  [ivo, wichert]


1.0 - 2008-09-17
----------------

- Update documentation to fit the code.
  [pbugni]

- Modify CatalogWalker to root the search at the portal passed in. This
  makes it possible to only migrate in parts of a site.
  [wichert]

- Correct path handling, cleanup classifiers, make short description short.
  [wichert]

- Use standard naming convention for the contentmigration package.
  [wichert]

- Be more graceful with schema mismatches.
  [wichert]

- Replaced deprecated transaction.commit(1) with
  transaction.savepoint(optimistic=True).
  [stonor]


1.0b4 - 2007-06-11
------------------

- Add import for os so egg can be built.
  [derek_richardson]

- Added missing `configure.zcml`.
  [witsch]

- Reorganize contentmigration trunk for eggification. If you are using the
  trunk as a product, pin to the previous revision or change your external
  to use src/Products/contentmigration.
  [derek_richardson]

- First eggified release.