@@ -4,6 +4,9 @@ Changelog
 1.3 - Unreleased
 ----------------
 
+- Use Zope3 interfaces from `OFS` and `Archetypes`.
+  [witsch]
+
 
 1.2 - 2009-08-09
 ----------------
